Project/ec2.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical

}

resource "aws_instance" "web" {
  ami                    = data.aws_ami.ubuntu.id
  user_data = file("apache.sh")
  availability_zone      = var.region
  vpc_security_group_ids = [aws_security_group.security_group.id]
  key_name               = aws_key_pair.deployer.key_name
  instance_type          = "t2.micro"

  
}

output ec2 {
    value = aws_instance.web.public_ip
}
